cache: kick the message queue when a cached resource finishes

Otherwise the resource is not unqueued unless a new request is made.

https://bugzilla.gnome.org/show_bug.cgi?id=744788